<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_notifications"
            android:title="@string/messages" />

        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/notifications"/>

        <item
            android:id="@+id/holidays"
            android:icon="@drawable/ic_holidays"
            android:title="@string/holidays"/>

        <item
            android:id="@+id/leave"
            android:icon="@drawable/ic_leave"
            android:title="@string/leave_management"/>

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_menu"/>
    </group>
</menu>